# AlgExTmp

./: .gitignore  AlgExTmp.cpp  CMakeLists.txt  CMakeSettings.json  kerr.cpp  kerr.h  matrix.h  out.txt  riemann.h  str.cpp  str.h  symb.cpp  symb.h
symb/: CMakeLists.txt  affine_space.h  riemann.h  str.cpp  symb.cpp  symb.h
vis/: CMakeLists.txt  fragment.glsl  vertex.glsl  vis.cpp  vis.h
